@@ -1,3 +1,9 @@
+Fri Nov 14 10:53:54 2003  Tim Janik  <timj@gtk.org>
+
+	* beast-gtk/dialogs/gadgets-beast.xml: 
+	* beast-gtk/dialogs/gadgets-standard.xml: added missing dashes to
+	gadget stencils.
+
 Fri Nov 14 10:42:56 2003  Tim Janik  <timj@gtk.org>
 
 	* beast-gtk/gxk/gxkgadgetfactory.[hc]: allocate an insertion slot from
